--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,11 @@ header {
     
 }
 
+.image{
+    height:223px;
+    width:223px;
+}
+
 .photographer_section article img {
     width : 150px; height : 150px;
     border: none;
