--- a/css/photographer.css
+++ b/css/photographer.css
@@ -6,7 +6,38 @@
     background-color: #FAFAFA;
     height: 300px;
     margin: 0 100px;
+    display:flex;
+    flex-direction:row;
+    
+    align-items: center;
 }
+
+.photograph-profile {
+    display:flex;
+    flex-direction: column;
+    margin-left:60px;
+}
+.profile article h1 {
+   color: #D3573C;
+   font-size: 64px;
+
+}
+
+.photograph-header_description_location{
+color: #901C1C;
+font-size: 24px;
+}
+.photograph-header_description_tagline{
+    font-size: 18px;
+    }
+    .photograph-header_description_picture_user{
+        width:200px;
+        height:200px;
+        border: none;
+        border-radius : 103px;
+        margin-left:285px;
+    }
+
 
 .contact_button {
     font-size: 20px;
@@ -19,6 +50,7 @@
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
+    margin-left:203px;
 }
 
 .modal {
