--- a/css/style.css
+++ b/css/style.css
@@ -66,10 +66,7 @@ header {
     
 }
 
-.card_image{
-    height:223px;
-    width:223px;
-}
+
 
 .photographer_section article img {
     width : 150px; height : 150px;
@@ -78,13 +75,6 @@ header {
     
 }
 
-.photograph_Creations{
-
-    justify-self: center;
-    display: flex;
-    justify-content: center;
-    align-items: center; 
-}
 
 
 
@@ -102,3 +92,50 @@ header {
     flex-direction: row;   
 }
 
+.photograph_Creations{
+    display:flex;
+    gap:15px;
+    padding:15px;
+}
+
+.photograph_Creations_card{
+  
+ margin-top:200px;
+   
+ }
+ .card_description_title{
+  margin-right:90px;
+ font-size:18px;
+   
+ }
+ .card_image{
+  
+    width:350px;
+    height:300px;
+
+    
+      
+    }
+    .card_descriptio{
+  
+       display:flex;
+       flex-direction: row;
+       
+          
+        }
+    .card_video{
+  
+        width:350px;
+        height:300px;
+       
+          
+        }
+    .card_description_likes{
+        font-size: 16px;
+    }
+    .card_description{
+        display:flex;
+        flex-direction: row;
+        align-items:center;
+    
+    }
