--- a/css/style.css
+++ b/css/style.css
@@ -120,3 +120,13 @@ header {
     font-size:1.5rem;
     font-weight:500;
 }
+
+.dropdown-menu{
+    width: 10.625rem;
+    height: 4rem;
+    background-color: #901c1c;
+    color: white;
+    font-size: 1.125rem;
+    font-weight: 700;
+    line-height: 3rem;
+}
