--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,20 @@ header {
     background: #db8876;
     font-size: 1.5rem;
     font-weight: 500;
+    display: flex;
+    flex-direction: row;
+}
+
+.price{
+    margin-right:10px;
+}
+.allLikes{
+    margin-right:0.25rem;
+}
+
+.photographersPriceHeart{
+    display: flex;
+    margin-right: 1rem;
 }
 
 
