--- a/css/style.css
+++ b/css/style.css
@@ -4,11 +4,21 @@ body {
     margin: 0;
 }
 header {
-
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
     height: 90px;
+}
+
+header h1{
+    color: #901C1C;
+
+}
+a img{
+    width:200px;
+    height:50px;
+    margin-left:62px;
 }
 .logo {
     height: 50px;
