--- a/css/style.css
+++ b/css/style.css
@@ -234,174 +234,80 @@ header .logo {
     width: 25%;
   }
   
-
-  
-  /* The Close Button */
-  .close {
-    color: white;
-    position: absolute;
-    top: 10px;
-    right: 25px;
-    font-size: 35px;
-    font-weight: bold;
-  }
-  
-  .close:hover,
-  .close:focus {
-    color: #999;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  /* Hide the slides by default */
-  .mySlides {
-    display: none; 
-  }
-  .mySlides img { 
-    width:100%;
-    height:500px;
-  }
-  
-  /* Next & previous buttons */
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -50px;
-    color: white;
-    font-weight: bold;
-    font-size: 20px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-    -webkit-user-select: none;
-  }
-  
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-  
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-  
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-  
-  /* Caption text */
-  .caption-container {
-    text-align: center;
-    background-color: black;
-    padding: 2px 16px;
-    color: white;
-  }
-  
-  img.demo {
-    opacity: 0.6;
-  }
-  
-  .active,
-  .demo:hover {
-    opacity: 1;
-  }
-  
-  img.hover-shadow {
-    transition: 0.3s;
-  }
-  
-  .hover-shadow:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-
-
-
-  .lightbox {
+  #lightboxMedia{
     position: fixed;
-    display: none;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background-color: rgba(0,0,0,.9);
+    z-index:10;
+    display:none;
+  }
+
+  .lightbox-img, .lightbox-video{
+    width:380px;
+    height:356px;
+    right:-446px;
+    top:292px;
+    position:relative;
+  }
+  
+
+  .lightbox__next, .lightbox__previous{
+    border:none;
+    background: url(/assets/icons/arrow.svg) center center / 48px 48px no-repeat;
+    width:96px;
+    height:100%;
+    position:fixed;
+    top:0;
+    right:0;
+    margin-top:31px;
+    z-index:12;  
+  }
+
+
+
+  .lightbox__previous{ 
+    right:auto;
+    left:0;
+    transform: rotate(180deg);
+  }
+
+  .lightbox__close{
+    width:35px;
+    height:35px;
+    border:none;
+    background: url(/assets/icons/close.svg) center center / 100% 100% no-repeat transparent;
+    position:fixed;
+    top:10px;
+    right:6px;
+    z-index:12;
+  }
+
+  #lightbox button {
+    opacity: .5;
+    cursor:pointer;
+    transition: opacity .3s;
+    text-indent: -3000px;
+    z-index:12;
+  }
+
+  #lightbox button:hover {
+    opacity:1;
+    text-indent: -3000px;
+  }
+
+  #lightbox__container{
+   position:relative;
+    display:flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    padding: 2em;
-    border-radius: 0.5rem;
-    background-color: #ffffff;
+    margin-left:50px;
+    margin-right:50px;
+    z-index:11;
+   
   }
-  .lightbox-container {
-    display: grid;
-    grid-template-columns: 8% 84% 8%;
-  }
-  .lightbox-grid1, .lightbox-grid3 {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-  }
-  .lightbox-grid1 {
-    grid-column: 1;
-    align-items: flex-end;
-  }
-  .lightbox-grid2 {
-    grid-column: 2;
-  }
-  .lightbox-grid3 {
-    position: relative;
-    grid-column: 3;
-    align-items: flex-start;
-  }
-  .lightbox-media {
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: center;
-    align-items: flex-start;
-    max-width: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    margin: 0 1em;
-  }
-  .lightbox-img, .lightbox-video {
-    max-width: 100%;
-    max-height: 100%;
-    overflow: hidden;
-    -o-object-fit: scale-down;
-       object-fit: scale-down;
-  }
-  .lightbox-close {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 3rem;
-    height: 3rem;
-    border: none;
-    background-color: transparent;
-    cursor: pointer;
-  }
-  .lightbox-close-img {
-    width: 100%;
-    height: 100%;
-  }
-  .lightbox-previous, .lightbox-next {
-    font-size: 4rem;
-    border: none;
-    background-color: transparent;
-    color: #911c1c;
-    cursor: pointer;
-  }
-  .lightbox-caption {
-    font-size: 3rem;
-    color: #911c1c;
-    margin: 0.5em 0;
-  }/*# sourceMappingURL=style.css.map */
+  
+
+  
