--- a/css/style.css
+++ b/css/style.css
@@ -152,13 +152,18 @@ header h1{
 }
 
 .dropdown-options{
-  width: 10.625rem;
-  height: 4rem;
-  background-color: #901c1c;
-  color: white;
-  font-size: 1.125rem;
-  font-weight: 700;
-  line-height: 3rem;
+    width: 10.625rem;
+    width: 100%;
+    height: 4rem;
+    border-radius: 0;
+    color: white;
+    background-color: #901c1c;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-align: left;
+    text-decoration: none;
+    margin-left:14px;
+    margin-top:13px;
 }
 
 
@@ -172,7 +177,7 @@ header .logo {
     right: 2.25rem;
     left: unset;
     width: -webkit-fit-content;
-    
+   
     width: fit-content;
     background: #db8876;
     font-size: 1.5rem;
@@ -314,6 +319,27 @@ header .logo {
     z-index:11;
    
   }
+
+  .dropDownSort{
+    margin-left:103px;
+  }
+
+  .dropdown-options2 {
+    margin-left:14px;
+    margin-top:13px;
+  }
+
+  
+
+  .dropdown-icon {
+    margin-top:19px;
+    margin-left:25px;
+    margin-right:5px;
+    rotate:271deg;
+    margin-bottom:-7px;
+  }
+
+  
   
 
   
