--- a/css/style.css
+++ b/css/style.css
@@ -145,6 +145,10 @@ header h1{
     font-size: 1.125rem;
     font-weight: 700;
     line-height: 3rem;
+    position:relative;
+    z-index:2;
+    top:-40px;
+    right:40px;
     
 }
 #sort-dropdown{
@@ -153,7 +157,6 @@ header h1{
 
 .dropdown-options{
     width: 10.625rem;
-    width: 100%;
     height: 4rem;
     border-radius: 0;
     color: white;
@@ -165,6 +168,89 @@ header h1{
     margin-left:14px;
     margin-top:13px;
 }
+
+
+l{
+    position:relative;
+    z-index:2;
+    top:-81px;
+    right:40px;
+    display:none;
+}
+
+
+
+
+
+.dropdown-optionsSpan{
+
+    margin-left:5px;
+    margin-top:13px;
+}
+
+
+.dropdown-optionsSpan2{
+
+    margin-left:5px;
+    margin-top:13px;
+}
+
+
+.dropdown-options3{
+    width: 10.625rem;
+    height: 4rem;
+   
+    border-radius: 0;
+    color: white;
+    background-color: #901c1c;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-align: left;
+    text-decoration: none;
+  
+}
+
+.dropdown-touch{
+    width: 10.625rem;
+    height: 4rem;
+   
+    border-radius: 0;
+    color: white;
+    background-color: #901c1c;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-align: left;
+    text-decoration: none;
+  
+}
+
+.dropdown-options4{
+    width: 10.625rem;
+    height: 4rem;
+   
+    border-radius: 0;
+    color: white;
+    background-color: #901c1c;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-align: left;
+    text-decoration: none;
+  
+}
+.dropdown-options5{
+    width: 10.625rem;
+    height: 4rem;
+   
+    border-radius: 0;
+    color: white;
+    background-color: #901c1c;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-align: left;
+    text-decoration: none;
+  
+}
+
 
 
 header .logo {
@@ -327,15 +413,32 @@ header .logo {
   .dropdown-options2 {
     margin-left:14px;
     margin-top:13px;
+      width: 10.625rem;
+    height: 4rem;
+   
+    border-radius: 0;
+    color: white;
+    background-color: #901c1c;
+    font-size: 1.125rem;
+    font-weight: 700;
+    text-align: left;
+    text-decoration: none;
   }
 
   
 
   .dropdown-icon {
-    margin-top:19px;
     margin-left:25px;
     margin-right:5px;
     rotate:271deg;
+    margin-bottom:-7px;
+  }
+
+   .dropdown-icon2 {
+    margin-top:12px;
+    margin-left:25px;
+    margin-right:5px;
+    rotate:450deg;
     margin-bottom:-7px;
   }
 
