--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ header {
 
 header h1{
     color: #901C1C;
+    margin-right:54px;
 
 }
 .header-logo{
@@ -39,8 +40,9 @@ header h1{
 }
 .photographer_section article h2 {
     color: #D3573C;
-    margin-top:0px;
-    margin-bottom:0px;
+    margin-top:26px;
+   font-size:36px;
+   margin-bottom:7px;
 }
 .photographerLink{
     justify-self: center;
@@ -186,7 +188,18 @@ l{
     display:none;
 }
 
+.city_and_country{
+    font-size:13px;
+    color:#901C10;
 
+}
+.tagline{
+    font-size:10px;
+}
+.price_homePage{
+    font-size:9px;
+    color:#757575;
+}
 
 
 
@@ -287,7 +300,7 @@ header .logo {
 
 
 
-.photographers-Price{
+.photographers_Price{
     z-index:1;
     top:834px;
     position:fixed;
