--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,6 @@ header h1{
 .photograph_Creations{
     display:flex;
     gap:15px;
-    padding:15px;
     margin: 0 100px;
     flex-direction: column;
 }
@@ -89,7 +88,7 @@ header h1{
     margin-top:23px;
     display:flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    gap:64px;
 }
 .card_description_title{
     font-size:18px;
@@ -127,6 +126,10 @@ header h1{
     justify-content: space-between;
     align-items:center;
     margin-bottom:15px;
+}
+
+.heart{
+    margin-left:5px;
 }
 
 .dashBoard{
@@ -315,10 +318,14 @@ header .logo {
     display: flex;
     flex-direction: row;
     padding:16px;
+    margin-right:50px;
 }
 
 .price{
     margin-right:10px;
+    margin-left:10px;
+    font-size:24px;
+    color:#000000;
 }
 .allLikes{
     margin-right:0.25rem;
@@ -326,13 +333,14 @@ header .logo {
 
 .photographersPriceHeart{
     display: flex;
-    margin-right: 1rem;
+    margin-right: 5rem;
+    margin-left:2rem;
 }
 
 
 .photograph_Creations_dropDown_word{
-    margin-left:2.6vw;
     margin-right:2.6vw;
+    margin-top:23px;
 }
 .row > .column {
     padding: 0 8px;
