--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,10 @@
 @import url("photographer.css");
 body {
     font-family: "DM Sans", sans-serif;
-    margin: 0;
+    width:1441px;
+    height:1024px;
+    margin-left:200px;
+    margin-right:200px;   
 }
 header {
     display: flex;
@@ -68,6 +71,8 @@ header h1{
     border: none;
     border-radius : 75px;
 }
+
+
 .photograph-header_description_picture{
     width : 150px;
     height : 150px;
@@ -88,7 +93,7 @@ header h1{
     margin-top:23px;
     display:flex;
     flex-wrap: wrap;
-    gap:64px;
+    gap:87px;
 }
 .card_description_title{
     font-size:18px;
@@ -278,7 +283,7 @@ l{
 
 
 header .logo {
-  margin-right:923px;
+  margin-right:1923px;
 }
 
 
