--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,4 +1,4 @@
-#contact_modal {
+#contactModal {
     display: none;
 }
 
@@ -56,43 +56,115 @@ padding-bottom:14px;
     background-color: #901C1C;
     border-radius: 5px;
     cursor: pointer;
-    margin-left:223px;
+    margin-left:193px;
 }
 
-.modal {
-    border-radius: 5px;
-    background-color: #DB8876;
-    width: 50%;
-    display: flex;
+  .modal {
+    position: fixed;
+    left: 40%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
     flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding: 35px;
-    margin: auto;
-    position:relative;
-    z-index:5;
+    border-radius: 0.5rem;
+    background-color: #db8876;
+    width:33rem;
+    padding: 1em;
+    z-index:34;
+    height:53rem;
 }
 
-.modal header {
-    justify-content: space-between;
+@media only screen and (max-width: 767px) {
+  .modal {
     width: 100%;
+    padding: 1em;
+  }
 }
-
-.modal header img {
-    cursor: pointer;
+.modal-header {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 0;
+  margin-top:0;
 }
-
-
-
-.modal header h2 {
-    font-size: 64px;
-    font-weight: normal;
-    text-align: center;
+.modal-title {
+  vertical-align: top;
+  font-size: 54px;
+  font-weight: 400;
+  margin-top:0px;
+  margin-bottom:0px;
+}
+@media only screen and (max-width: 767px) {
+  .modal-title {
+    font-size: 3.5rem;
+  }
+}
+.modal-close {
+  width: 5rem;
+  height: 5rem;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+@media only screen and (max-width: 767px) {
+  .modal-close {
+    width: 3rem;
+    height: 3rem;
+  }
+}
+.modal-close-img {
+  width: 100%;
+  height: 100%;
+}
+.modal-form {
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.modal-label {
+  color: #312e2e;
+}
+@media only screen and (max-width: 767px) {
+  .modal-label {
+    font-size: 2rem;
+  }
+}
+.modal-input {
+  height:1rem;
+  width:94%;
+  border: none;
+  border-radius: 0.5rem;
+  font-size: 2rem;
+  margin: 0;
+  padding: 0.5em;
+}
+@media only screen and (max-width: 767px) {
+  .modal-input {
+    height: 4rem;
+    font-size: 1rem;
+  }
+}
+.modal-msg {
+  height: 7rem;
+}
+@media only screen and (max-width: 767px) {
+  .modal-msg {
+    height: 10rem;
+  }
+}
+.modal-submit {
+  margin-top: 2em;
+}
+@media only screen and (max-width: 767px) {
+  .modal-submit {
+    margin-top: 0;
+  }
 }
 
 form {
     display: flex;
-    width: 100%;
     flex-direction: column;
     align-items: flex-start;
 }
@@ -111,8 +183,6 @@ form div {
 }
 
 form input {
-    width: 100%;
-    height: 68px;
     border: none;
     border-radius: 5px;
 }
