--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,8 @@ header h1{
     margin-top:23px;
     display:flex;
     flex-wrap: wrap;
-    gap:87px;
+    column-gap:91px;
+    row-gap: -9px;;
 }
 .card_description_title{
     font-size:18px;
@@ -399,7 +400,7 @@ header .logo {
   }
 
 #message{
-    width:100%;
+    width:94%;
 }
 
   .lightbox__previous{ 
