--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,7 @@ header .logo {
 .photograph_Creations_dropDown_word{
     margin-right:2.6vw;
     margin-top:23px;
+    font-weight: bolder;
 }
 .row > .column {
     padding: 0 8px;
