--- a/css/style.css
+++ b/css/style.css
@@ -500,7 +500,17 @@ header .logo {
     top:280px;
   }
 
-  
+  .contactModal_background{
+   
+    position: fixed;
+    z-index: 3;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(26,39,156,0.4);
+}
   
 
   
