--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,5 +1,14 @@
-#contactModal {
+#contactModal_background {
     display: none;
+    position: fixed;
+    z-index: 3;
+    left: 0;
+    top: 0;
+    color:black;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(26,39,156,0.4);
 }
 
 .photograph-header {
@@ -61,10 +70,10 @@ padding-bottom:14px;
 
   .modal {
     position: fixed;
+    display:block;
     left: 40%;
     top: 50%;
     transform: translate(-50%, -50%);
-    display: none;
     flex-direction: column;
     border-radius: 0.5rem;
     background-color: #db8876;
