--- a/css/photographer.css
+++ b/css/photographer.css
@@ -13,10 +13,10 @@
 
 .photograph-header {
     background-color: #FAFAFA;
-    width:1240px;
-    height: 313px;
+    width:100%;
     margin: 0 100px;
     display:flex;
+    justify-content: space-around;
     flex-direction:row;
     align-items: center;
 }
