--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ header h1{
 .photograph_Creations{
     display:flex;
     gap:15px;
+    width:100%;
     margin: 0 100px;
     flex-direction: column;
 }
@@ -535,8 +536,8 @@ header .logo {
 
 body {
     font-family: "DM Sans", sans-serif;
-    width:1441px;
-    height:1024px; 
+    width:100%;
+    
 }
 
 .header-logo{
