--- a/css/photographer.css
+++ b/css/photographer.css
@@ -11,6 +11,18 @@
     background-color: rgba(26,39,156,0.4);
 }
 
+
+  
+.invalid-feedback{
+  color:#400000;
+  display:none;
+}
+
+#confirmation{
+  color:#400000;
+  display:none;
+}
+
 .photograph-header {
     background-color: #FAFAFA;
     width:100%;
@@ -64,6 +76,7 @@ padding-bottom:14px;
     border: none;
     background-color: #901C1C;
     border-radius: 5px;
+    margin-top:23px;
     cursor: pointer;
     margin-left:193px;
 }
@@ -80,7 +93,7 @@ padding-bottom:14px;
     width:33rem;
     padding: 1em;
     z-index:34;
-    height:53rem;
+    height:50rem;
 }
 
 @media only screen and (max-width: 767px) {
